Fixed: user dropdown hidden behind search bar on browse view

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -97,6 +97,7 @@ body {
           max-height: 0px;
           background-color: fade(white, 10%);
           overflow: hidden;
+          z-index: 1;
 
           .user-link {
             @include sans-serif($bold, 14px, 14px);
